# Dynamic-Translator-Board

./: .gitignore  Kapstokdocument.docx  README.md
DOCX/: Evaluatie opdrachtgever.docx  Experimenteel Onderzoek.docx  Experimenteel onderzoek (8).docx  Experimenteel onderzoek.docx  Gebruikersonderzoek (1).docx  Gebruikersonderzoek.docx  Onderzoeksverslag Modulairiteit.docx  Onderzoeksverslag modulairiteit prjt56.docx  Onderzoeksverslag modulairiteit.docx  Probleemomschrijving.docx  Requirementsanalyse (5).docx  Requirementsanalyse.docx  Risicoanalyse (3).docx  Risicoanalyse.docx  Sprintplanning prjt56.xlsx  Testrapport (1).docx  Testrapport.docx  Testrapport_1.docx
MD/: Experimenteel_Onderzoek.md  Gebruikersonderzoek.md  Kapstokdocument.md  Onderzoeksverslag_Modulariteit.md  Probleemomschrijving.md  Requirementsanalyse.md  Risicoanalyse.md  Testrapport.md
Presentaties/: Sprint 0.pptx  Sprint 2.pptx  Sprint 5.pptx  Sprint 6.pptx
Schriftelijke Documentatie/Extras/: Samenwerkingsovereenkomst.docx
Schriftelijke Documentatie/Onderzoeken/: Modulariteitsonderzoek.docx  Probleemomschrijving.docx
Schriftelijke Documentatie/Planningen/: UserStories + Requirements.xlsx
Software/AERO-LINUX/: .gitignore  List of dependancies.docx  README.md  old_software.cpp
Software/AERO-LINUX/flowdiagrams/: Aero flow diagram.graphml
Software/AERO-LINUX/main/: CMakeLists.txt
Software/AERO-LINUX/main/Documentation/: Features to implement.txt
Software/AERO-LINUX/main/files/: conf.json  sensorModules.json  sensorModules_demo.json
Software/AERO-LINUX/main/include/: eliApi.h  function_codes.h  function_handler.h  i2cFunctions.h  printmsg.h  protocol_translator.h  sensorManager.h  sensorModule.h  server_handler.h  stopwatch_base.h
Software/AERO-LINUX/main/src/: eliApi.cpp  function_handler.cpp  i2cFunctions.cpp  main.cpp  printmsg.cpp  protocol_translator.cpp  sensorManager.cpp  sensorModule.cpp  server_handler.cpp  test.cpp
Software/AERO-LINUX/wifiCred/: CMakeLists.txt  build_run.sh  buildscript.sh  libs.txt
Software/AERO-LINUX/wifiCred/files/: Function codes.txt
Software/AERO-LINUX/wifiCred/python/: install.txt  main.py  master  test.py  test1.py
Software/AERO-LINUX/wifiCred/python/templates/: index.html
Software/AERO-LINUX/wifiCred/src/: main.cpp
Software/AERO-MODULES/: .gitignore  .gitmodules  README.md  dependancies.txt
Software/AERO-MODULES/sensorModules/: CMakeListsEXAMPLE.txt
Software/AERO-MODULES/sensorModules/sensorModule-NewCom/: CMakeLists.txt  Json Structure.txt  compileCmake.sh  makeCompileFlash.sh  qompile.sh
Software/AERO-MODULES/sensorModules/sensorModule-NewCom/include/: constConfig.h  function_codes.h  i2cHandlerCyrb.h  protocol_translator.h  scd4x.h  sensor.h
Software/AERO-MODULES/sensorModules/sensorModule-NewCom/include/boards/: cyrb_dev_rp2040_v1.h  cyrb_sensor_module_v0_4.h
Software/AERO-MODULES/sensorModules/sensorModule-NewCom/src/: i2cHandlerCyrb.cpp  main.cpp  protocol_translator.cpp
Software/AERO-MODULES/sensorModules/sensorModule-NewCom/src/sensors/: bmp280.cpp  combine.cpp  dht22.cpp  hm3301.cpp  scd4x.cpp  sensorTemplate.cpp  test.cpp
Visuele Documentatie/Presentaties/: Sprint.1.pptx  Sprint.3.pptx
